<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/titleBackground"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_tracker"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FAFAFB"
        app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
        app:layout_constraintStart_toEndOf="@+id/titleImage" />

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
        app:layout_constraintStart_toStartOf="@+id/titleBackground"
        app:srcCompat="@android:drawable/btn_star" />

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="244dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBackground"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/MainButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:onClick="goToLogActivity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/log_body_temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3F6F6" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/MainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:onClick="goToNormalActivity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/check_normal_range"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3F6F6" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/MainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:onClick="goToMechanismActivity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/mechanism_of_fever"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3F6F6" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/MainButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:onClick="goToHandleActivity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/handling_fever"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3F6F6" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>